<!--
  ~ /**
  ~  * Created by Candra Ibra Sanie on 2/19/20 4:26 PM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 1/13/20 3:05 PM
  ~  */
  -->

<resources>
    <string name="app_name">CatMovie3</string>
    <string name="movies">Movies</string>
    <string name="tv">Tv Shows</string>
    <string name="cat">Cat</string>
    <string name="movie">Movie</string>
    <string name="lorem">lorem is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="popular_in_catmovie">Popular in CatMovie</string>
    <string name="desc">Description</string>
    <string name="title">Title</string>
    <string name="favorite">Favorite</string>
    <string name="your_favorite_movies">Your Favorite Movies</string>
    <string name="your_favorite_tvs">Your Favorite Tvs</string>
    <string name="upcoming">Upcoming</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
